# shrew

./: .gitignore  CMakeLists.txt  Config.cmake.in  LICENSE  Readme.md  shrew
.github/workflows/: cmake-single-platform.yml
bindings/: __init__.py  bind_distributions.cpp  bind_gaussian_process.cpp  bind_normal_distribution.cpp  bind_random_variable.cpp  bind_random_vector.cpp  pyshrew_bind.cpp  setup.py  wrapper.cpp
include/: compound_distribution.h  delta_distribution.h  generic_distribution.h  multivariate_normal.h  normal_distribution.h  random_variable.h  random_vector.h
include/shrew/: arithmetic.hpp  compound_distribution.hpp  delta_distribution.hpp  generic_distribution.hpp  logic_assertions.hpp  multivariate_normal.hpp  normal_distribution.hpp  numerical_methods.hpp  random_vector.hpp
include/shrew/gaussian_process/: gaussian_process.hpp  kernel.hpp  maternKernel.hpp  maternKernelExtended.hpp  maternKernelNoise.hpp  matern_kernel.hpp  matern_kernel_extended.hpp  squaredExponentialKernel.hpp  squared_exponential_kernel.hpp
include/shrew/utils/: cast_utils.hpp
src/: CMakeLists.txt  arithmetic.cpp  arithmetic.h  compound_distribution.h  delta_distribution.cpp  generic_distribution.cpp  generic_distribution.h  logic_assertions.cpp  logic_assertions.h  multivariate_normal.cpp  normal_distribution.cpp  normal_distribution.h  numerical_methods.cpp  numerical_methods.h  random_variable.cpp  random_variable.h  test.cpp
src/ProbabilityDistribution/: compound_distribution.h  generic_distribution.cpp  generic_distribution.h  normal_distribution.cpp  normal_distribution.h
src/gaussian_process/: CMakeLists.txt  gaussian_process.cpp  maternKernel.cpp  maternKernelExtended.cpp  maternKernelNoise.cpp  matern_kernel.cpp  matern_kernel_extended.cpp  squaredExponentialKernel.cpp  squared_exponential_kernel.cpp
src/normal_distribution.dSYM/Contents/: Info.plist
src/normal_distribution.dSYM/Contents/Resources/DWARF/: normal_distribution
src/random_variable.dSYM/Contents/: Info.plist
src/random_variable.dSYM/Contents/Resources/DWARF/: random_variable
src/test.dSYM/Contents/Resources/DWARF/: test
src/vector_test.dSYM/Contents/Resources/DWARF/: vector_test
tests/: CMakeLists.txt  compound_distribution.cpp  gaussian_process.cpp  generic_distribution.cpp  multivariate_normal.cpp  normal_distribution.cpp
tests/gaussian_process/: CMakeLists.txt  gaussian_process.cpp
